--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://veronikapolkhanova.github.io/Note_with_weather/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "moment": "^2.29.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -17,6 +19,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
